about.css
/** 1. GENEREL
/** 2. INDEX PAGE
/** 3. PHOTOS
/** 4. VIDEO
/** 5. ABOUT
/** 6. MEDIA Q **/


* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
/*	overflow-x: hidden;*/

}


/*SoMe buttons*/

.fa {
	padding: 20px;
	font-size: 30px;
	width: 50px;
	text-align: center;
	text-decoration: none;
	margin: 5px 2px;
}

.fa:hover {
	opacity: 0.7;
}

.fa-facebook {
	background: #000;
	color: white;
}

.fa-instagram {
	background: #000;
	color: white;
}

.fa-google {
	background: #000;
	color: white;
}

.fa-linkedin {
	background: #000;
	color: white;
}




/*--------cv code*---------------------/ */
.cv {
	padding-top: 3vh;
	padding-left: 5.1vw;
	padding-bottom: 2vh;
	color: #f0f0f0;
}

.education {
	color: #f0f0f0;
}

.column3 {
	padding-left: 5.1vw;
	max-width: 50%;
}

/*
.column3 p {
	font-size: 2em;
}
*/



/*new float/*

/******************* ABOUT PAGE ******************/

.container4 {
	display: flex;
	flex-direction: row;
}

.column {
	flex-basis: 300px;
	flex-grow: 1;
	padding-right: .5vw;
	padding-left: 5vw;
}

.column2 {
	flex-basis: 300px;
	flex-grow: 1;
	padding-right: .5vw;
	padding-left: 1.5vw;
}

.myfloat {
	/*	float: left;*/
	width: 100%;
	height: auto;


}



/*ABOUT FLOAT*/

.product-row:nth-child(odd) .product-image {
	padding-left: 5%;
	padding-right: 0;
}

.product-row {
	display: flex;
	margin-bottom: 0;
	// max-height: 500px;
	min-height: 500px;
	align-items: center;
}


.product-image {
	/*	// max-width: 420px;*/
	/*	width: 45%;*/
	float: left;
	/*	flex: 1 1 45%;*/
	/*	padding-right: 5%;*/
	/*	max-width: 45% !important;*/
	/*	min-width: 320px;*/
}

.product-text {
	// display: flex;
	position: relative;
	width: 90%;
	float: right;
	flex: 1 1 90%;
	max-width: 90%;
}

.product-buttons {
	padding-top: 2em;
}

.product-title {
	padding-bottom: 3vw;
	color: #fff;
	font-weight: 800;
	font-size: 2em;
}

.IGlogo {
	vertical-align: middle;
}

.FBlogo {
	vertical-align: middle;
}

.IGtext {
	font-size: 1.5vw;

}

.IGtext:hover {
	color: #000;
}

/*ABOUT FLOAT END*/

/*SLIDER*/




/****SLIDESHOW STYLING******/
#wrapper {
	width: 100%;
	max-width: 964px;
	position: relative;
}

/*
.wrapper {
	display: flex;
	justify-content: center;
}
*/

#carousel {
	overflow: auto;
	scroll-behavior: smooth;
	scrollbar-width: none;
}

#carousel::-webkit-scrollbar {
	height: 0;
}

#tilbage,
#frem {
	display: flex;
	justify-content: center;
	align-content: center;
	background: white;
	border: none;
	padding: 8px;
	border-radius: 50%;
	outline: 0;
	cursor: pointer;
	position: absolute;
}

#tilbage {
	top: 50%;
	left: 0;
	transform: translate(50%, -50%);
	display: none;
}

#frem {
	top: 50%;
	right: 0;
	transform: translate(-50%, -50%);
}

#indhold {
	display: grid;
	grid-gap: 16px;
	grid-auto-flow: column;
	margin: auto;
	box-sizing: border-box;
}

.slide_billede {
	width: 310px;
	height: 310px;
}




/*SLIDER ENDS*/


/*new iframe try*/


.iframe-container {
	position: relative;
	overflow: hidden;
	padding-top: 56.25%;



}

#myVideo {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 90%;
	border: 0;
	padding-left: 5vw;
	padding-right: 5vw;




}



html {
	font-size: 12px;
	font-family: "lanord-regular",
		sans-serif;
}

.body2 {
	overflow-x: hidden;
}

a {
	text-decoration: none;
	color: #eee;
}

header {
	width: 100%;
	height: 100vh;

	background-size: cover;


}






.homebg {
	/*	background-color: darkorange;*/
	background-color: black;
	/*
	-webkit-text-fill-color: transparent;
	-webkit-background-clip: text;
*/
}



/*home page idea for Martin Klingman text*/
.newhead5 {
	text-decoration: none;
	color: white;
	/*	font-family: "avenir",
sans-serif;*/
	font-family: "lanord-bold", sans-serif;
	letter-spacing: 2px;
	/*	padding-top: 26.6em;*/
	/*	padding-top: 5.6em;*/
	font-size: 7.12vw;
	justify-content: center;
	margin-right: 2vw;
	text-align: center;
	opacity: .6;




}

@keyframes BGFadeInOut {
	0% {
		opacity: 0;
	}

	100% {
		opacity: .7;
	}
}

/*#cf3 img.top*/
.newhead5 {
	animation-name: BGFadeInOut;
	animation-timing-function: ease-in-out;
	animation-iteration-count: infinite;
	animation-duration: 8s;
	animation-direction: alternate;

}

/*-----------New font try out - La Nord -----------------*/

@font-face {
	font-family: "lanord-bold";
	src: url("fonts/LaNord-Bold.woff");
	font-weight: bold;
}

/*=========================================*/

/*-----------New font try out - La Nord -----------------*/

@font-face {
	font-family: "lanord-light";
	src: url("fonts/LaNord-Light.woff");
	font-weight: bold;
}

/*=========================================*/

/*-----------New font try out - La Nord -----------------*/

@font-face {
	font-family: "lanord-semilight";
	src: url("fonts/LaNord-SemiLight.woff");
	font-weight: medium;
}

/*=========================================*/
/*-----------New font try out - La Nord -----------------*/

@font-face {
	font-family: "lanord-regular";
	src: url("fonts/LaNord-Regular.woff");
	/*	font-weight: bold;*/
}

/*=========================================*/


.container {
	max-width: 120rem;
	width: 90%;
	margin: 0 auto;
}

nav {
	padding-top: 5rem;
	/*	background-color: oldlace;*/
	display: flex;
	justify-content: space-between;
	align-items: center;
	text-transform: uppercase;
	font-size: 1.3rem;
	line-height: 2.5rem;
	font-weight: 300;
}

.portfolio {
	font-size: 2.5rem;
	font-weight: 300;
	transform: translateX(-100rem);
	animation: slideIn 1.5s forwards;
	overflow-y: hidden;

}

.portfolio span {
	color: #000;
}

#martinklingman span {
	color: lightskyblue;
	font-size: 4em;

}


nav ul li {
	list-style: none;
	transform: translateX(100rem);
	animation: slideIn 1s forwards;
	overflow-y: hidden;
}

nav ul li:nth-child(1) {
	animation-delay: 0s;
}

nav ul li:nth-child(2) {
	animation-delay: .5s;
}

nav ul li:nth-child(3) {
	animation-delay: 1s;
}

nav ul li:nth-child(4) {
	animation-delay: 1.5s;
}

nav ul li:nth-child(5) {
	animation-delay: 2s;
}

nav ul li a {
	padding: 1rem 0;
	margin: 0 3rem;
	position: relative;
	letter-spacing: 2px;

}



nav ul li a:last-child {
	margin-right: 0;
}

nav ul li a::before,
nav ul li a::after {
	content: '';
	position: fixed;
	width: 100%;
	height: 1px;
	background-color: #000;
	left: 0;
	transform: scaleX(0);
	transition: all, .3s;

}

nav ul li a::before {
	top: 0;
	transform-origin: left;
}

nav ul li a::after {
	bottom: 0;
	transform-origin: right;
}

nav ul li a:hover::before,
nav ul li a:hover::after {
	transform: scaleX(1);
}

@keyframes slideIn {


	to {
		transform: translateX(0);
	}
}



/*start about css*/

main {
	/*	font-family: "Roboto Cn", sans-serif;*/
	font-family: "lanord-bold", sans-serif;
	padding-top: 0rem;
}

.header2 {
	background-image: none;
	/*	background-color: white;*/
	background-color: #0000ff;
	width: 100%;
	height: 35vh;
	/*	background: linear-gradient(to bottom, rgba(0, 0, 0, .6), rgba(0, 0, 0, .2));*/
	background-size: cover;
}


h2 {
	text-align: center;
	color: #eee;
	padding-top: 2rem;
	padding-bottom: 2rem;
}



.body2 {

	max-width: 100vw;
	background-color: #0000ff;

}



p {

	padding-right: 4rem;
	color: #eee;
	font-size: 16px;
	font-weight: lighter;
	word-break: keep-all;

}


.aboutpic {
	display: flex;
	justify-content: center;
	padding-top: 5rem;
	padding-bottom: 5rem;



}

.meetpic {
	display: flex;
	justify-content: center;

	padding-top: 5rem;


}




.newhead1 span {
	display: block;
}

div.img {
	text-align: center
}

footer {
	text-align: center;
	padding-top: 2rem;
	color: #fff;

}


}


div.img {
	text-align: center;
	width: 100%;

}

.link2 {
	text-decoration: none;
	color: #fff;
}

.newhead {
	text-decoration: none;
	color: #fff;
	font-family: "lanord-bold", sans-serif;
	letter-spacing: 2px;
}



.newhead3 {
	color: black;
	letter-spacing: .5px;
	font-weight: 300;
	padding-top: 1em;
	font-family: "lanord-semilight", sans-serif;
}

.newhead1 {
	text-decoration: none;
	color: black;
	letter-spacing: .5px;
	font-weight: 300;
	font-family: "lanord-semilight", sans-serif;
	line-height: 1.4;

}

.newhead2 {
	text-decoration: none;
	color: #eee;
	letter-spacing: .5px;
	font-weight: 300;
	padding-top: 6rem;
	font-size: 16vw;
	opacity: .9;
}

.newhead7 {
	text-decoration: none;
	color: #eee;
	font-family: "lanord-bold", sans-serif;
	letter-spacing: 2px;

}


/*IFRAME HERE*/



/*BEGIN PORTFOLIO PAGE CSS HERE*/



.linkcolor {
	color: black;
	padding-left: 10px;
}

.linkcolor:hover {
	color: #000;
}

.linkcolormore {
	color: #eee;
	padding-left: 10px;
	letter-spacing: 5px;
}

.linkcolormore:hover {
	color: #000;
}

.clearpic {
	background-image: none;
}


.morepic {
	width: 100%;
	height: 100vh;
	background: linear-gradient(to bottom, rgba(0, 0, 0, .2), rgba(0, 0, 0, .05)), url(photo/a.jpg) center no-repeat;
	background-size: cover;


}

.aboutfooter {
	position: fixed;
	left: 0;
	bottom: 0;
	width: 100%;
	padding: 0;

}

.videofooter {
	position: fixed;
	left: 0;
	bottom: 0;
	width: 100%;
	padding: 0;

}

.cvfooter {
	position: fixed;
	left: 0;
	bottom: 0;
	width: 100%;
	padding: 0;
}

.workspic {
	display: flex;
	justify-content: center;
	padding-top: 1px;
	padding-bottom: 2rem;

}

.linked {
	padding-top: 2.2rem;
}

.pdf {
	padding: 50px;
}

/*trying to center pic and left text*/
.workpx {
	width: 80%;
	height: auto;
}



/*image size for about page here*/
.imagesize {
	width: 30%;
	height: 30%;
}


.imagesize:hover {
	color: white;
	opacity: .8;
	background-color: #000;
	padding-left: 1px;
	padding-right: 1px;

}



/* css for more page javascript ends--------------------------------------------*/


@media all and (min-width:360px) and (max-width:700px) {

	.cv {
		padding-top: 4.2vh;
	}


	.column3 {
		max-width: 95%;
	}

	.education {

		padding-top: 2vh;
	}

	.column3 p {
		font-size: 1.3em;
	}



	p {
		padding-right: 0rem;
	}

	.column {
		padding-right: 2vw;
		padding-left: 2vw;
	}

	.column2 {

		padding-right: 5vw;
		padding-left: 5vw;

	}

	.column2 p {
		font-size: 1.3em;
	}



	.container4 {
		flex-flow: column;

	}

	.IGtext {
		font-size: 2vh;
		;
	}


	.IGlogo {
		width: 4vh;
	}

	.FBlogo {
		width: 3vh;
	}


	.martin {
		padding-top: 3em;
	}


	header {
		width: 100%;
		height: 100vh;

		background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, .5)),
			url(images/faces.jpg) center no-repeat;
		background-size: cover;


	}


	.newhead5 {


		padding-top: 16em;
		font-size: 5.8vw;


	}


	/*	flip text vertically on mobile*/
	.newhead7,
	a.newhead {
		font-size: 1em;

	}

	/*----------------------------------------*/

	#myVideo {
		padding-left: 3px;
		padding-right: 3px;



	}

	.newhead3,
	.newhead1 {
		font-size: 1em;

	}


	p {
		padding-top: 2vh;
		font-size: 18px;



	}

	.aboutpic {
		display: flex;
		justify-content: center;
		padding-top: 2.6rem;
		padding-bottom: .8rem;


	}

	.meetpic {
		display: flex;
		justify-content: center;
		padding-top: 1rem;
		padding-bottom: 1rem;

	}


	.imagesize {
		width: 55%;
		height: 55%;
	}


	.email {
		padding-left: 0 !important;
		padding-right: 0 !important;
	}

	.email .linkcolormore {
		letter-spacing: 3px;
	}

	.workspic {
		display: flex;
		justify-content: center;
		padding-top: 1rem;
		padding-bottom: 1rem;

	}


	/*trial here shifting nav bar in response mode*/

	nav li {
		line-height: 3rem;


	}

	nav {
		padding-top: 3rem;
	}

	h2 {
		padding-top: 3rem;
	}

}

@media (min-width: 900px) {
	.email .linkcolormore {
		letter-spacing: 10px;
	}
}

@media all and (min-width:360px) and (max-width:700px) {
	.container4 {
		/*		overflow-x: inherit;*/
	}

	.column2 {
/*		overflow-x: scroll;*/
	}


	/*
	.myfloat {
		float: left;
		width: 90%;
		height: auto;


	}
*/

	/*
	.aboutfooter {}
*/
}

